# shipyard

./: .actrc  .env.example  .gitignore  AGENTS_SDK.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt
.agents/skills/shipyard-doc-agent/: SKILL.md
.agents/skills/shipyard-spec-reviewer/: SKILL.md
.claude/skills/shipyard-code-quality-reviewer/: SKILL.md
.claude/skills/shipyard-doc-verifier/: SKILL.md
.claude/skills/shipyard-planner/: SKILL.md
.claude/skills/shipyard-task-agent/: SKILL.md
.github/: README.md
.github/tests/: test-all.sh  test-epic-driver.sh  test-plan-driver.sh  test-sync-driver.sh
.github/tests/events/: epic-issue-comment-ship-run.json  epic-issues-labeled.json  epic-pr-merged.json  epic-workflow-dispatch.json  plan-issue-comment-ship-plan.json  plan-issue-comment-ship-replan.json  (+4 more)
.github/workflows/: ci.yml  epic-driver.yml  plan-driver.yml  review-driver.yml  sync-driver.yml
docs/: ARCHITECTURE.md  README.md  agent-pipeline.md  agent-prompts.md  cli.md  github-integration.md  task-format.md  workflow.md
docs/explanation/: agent-pipeline.md  architecture.md  github-integration.md
docs/how-to/: run-your-first-epic.md
docs/reference/: agent-prompts.md  cli.md  settings.md  task-format.md  workflow.md
plans/: README.md  i17.md
prompts/: code-quality-reviewer.md  planner.md
scripts/: executor.py  find_epic_work.py  plan_to_tasks.py  sync_to_github.py
shipyard/: cli.py  settings.py  sim.py
shipyard/commands/: execute.py  find_work.py  init.py  plan.py  publish.py  sync.py  tasks.py  update_docs.py
shipyard/schemas/: __init__.py  subtask.py  subtask_list.py
shipyard/templates/: epic-driver.yml  plan-driver.yml  sync-driver.yml
shipyard/utils/: agent.py  gh.py  git.py  github_event.py
tests/: test_commands_find_work.py  test_commands_init.py  test_commands_plan.py  test_commands_publish.py  test_commands_sync.py  test_commands_tasks.py  test_commands_update_docs.py  test_executor.py  test_find_epic_work.py  test_github_event.py  test_plan_to_tasks.py  test_scaffolding.py  test_sync_to_github.py  test_utils_agent.py  test_utils_gh.py  test_utils_git.py  test_workflow.py
tests/fixtures/: sample_plan.md  sample_tasks.json
tests/workflows/: Dockerfile  conftest.py  test_epic_driver.py  test_plan_driver.py  test_review_driver.py  test_sync_driver.py
(+31 files in other folders)
